feat: [PAGOPA-3066] Improve helpdesk controller
